--- a/learn/index.html
+++ b/learn/index.html
@@ -6,8 +6,20 @@
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
-    <div class="card">
-      <img class="card-photo" src="jumping.jpg" alt="Oksana" />
+     <H1 class="title">Оформление текста</H1>
+     <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+    </p>
+
+     <h2 class="subtitle">Заголовок второго уровня</h2>
+     <p>Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе.</p>
+    <ul class="list"> 
+      <li>Многие думают, что Lorem Ipsum</li>
+      <li>взятый с потолка псевдо-латинский</li>
+      <li>набор слов, но это не совсем так</li>
+    </ul>
+
+  
+      
     </div>
   </body>
 </html>
