adding icons to the project

--- a/learn/index.html
+++ b/learn/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
      <H1 class="title">Оформление текста</H1>
-     <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+     <p >Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дуб      и "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
     </p>
 
      <h2 class="subtitle">Заголовок второго уровня</h2>
@@ -17,9 +20,15 @@
       <li>взятый с потолка псевдо-латинский</li>
       <li>набор слов, но это не совсем так</li>
     </ul>
-
-  
-      
+    <i class="material-icons">cloud</i>
+    <i class="material-icons">favorite</i>
+<i class="material-icons">attachment</i>
+<i class="material-icons">computer</i>
+<i class="material-icons">traffic</i>
+<br><br>
+<i class="fas fa-clock"></i>
+<i class="fas fa-basketball-ball" style="font-size:120px;color:#2196F3" ></i>
+    
     </div>
   </body>
 </html>
