adding styling links

--- a/learn/index.html
+++ b/learn/index.html
@@ -28,6 +28,8 @@
 <br><br>
 <i class="fas fa-clock"></i>
 <i class="fas fa-basketball-ball" style="font-size:120px;color:#2196F3" ></i>
+<i class="far fa-address-card" style="font-size:120px;color:#16fc0ebb"></i>
+
     
     </div>
   </body>
