--- a/learn/index.html
+++ b/learn/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
+    
     <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
 <i class="fas fa-clock"></i>
 <i class="fas fa-basketball-ball" style="font-size:120px;color:#2196F3" ></i>
 <i class="far fa-address-card" style="font-size:120px;color:#16fc0ebb"></i>
-
+<p><b><a href="https://htmlbase.ru/" target="_blank">Ссылка на шпаргалки</a></b></p>
     
     </div>
   </body>
