--- a/learn/index.html
+++ b/learn/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    
     <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
@@ -14,7 +13,12 @@
     </p>
 
      <h2 class="subtitle">Заголовок второго уровня</h2>
-     <p>Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе.</p>
+     <p><b>Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе.In this example, the sticky element sticks to the top of the page (top: 0), when you reach its scroll position.</b>
+
+Scroll back up to remove the stickyness.
+
+Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+</p>
     <ul class="list"> 
       <li>Многие думают, что Lorem Ipsum</li>
       <li>взятый с потолка псевдо-латинский</li>
