An element with position: fixed; is positioned relative to the viewport

--- a/learn/index.html
+++ b/learn/index.html
@@ -36,5 +36,8 @@ Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones n
 <p><b><a href="https://htmlbase.ru/" target="_blank">Ссылка на шпаргалки</a></b></p>
     
     </div>
+    <div class="fixed">
+      Зафиксировано!
+      </div>
   </body>
 </html>
