--- a/learn/index.html
+++ b/learn/index.html
@@ -3,41 +3,82 @@
   <head>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://kit.fontawesome.com/0248bf2fc3.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <script
+      src="https://kit.fontawesome.com/0248bf2fc3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
-     <H1 class="title">Оформление текста</H1>
-     <p >Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дуб      и "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+    <h1>Это картинка</h1>
+    <h1 class="title">Оформление текста</h1>
+    <p>
+      Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает
+      сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более
+      или менее стандартное заполнение шаблона, а также реальное распределение
+      букв и пробелов в абзацах, которое не получается при простой дуб и "Здесь
+      ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы
+      электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве
+      текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу
+      показывает, как много веб-страниц всё ещё дожидаются своего настоящего
+      рождения. За прошедшие годы текст Lorem Ipsum получил много версий.
+      Некоторые версии появились по ошибке, некоторые - намеренно (например,
+      юмористические варианты).
     </p>
 
-     <h2 class="subtitle">Заголовок второго уровня</h2>
-     <p><b>Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе.In this example, the sticky element sticks to the top of the page (top: 0), when you reach its scroll position.</b>
+    <h2 class="subtitle">Заголовок второго уровня</h2>
+    <p>
+      <b
+        >Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский
+        набор слов, но это не совсем так. Его корни уходят в один фрагмент
+        классической латыни 45 года н.э., то есть более двух тысячелетий назад.
+        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат
+        Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
+        "consectetur", и занялся его поисками в классической латинской
+        литературе.In this example, the sticky element sticks to the top of the
+        page (top: 0), when you reach its scroll position.</b
+      >
 
-Scroll back up to remove the stickyness.
-
-Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-</p>
-    <ul class="list"> 
+      Scroll back up to remove the stickyness. Some text to enable scrolling..
+      Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
+      concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius
+      te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
+      Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
+    </p>
+    <ul class="list">
       <li>Многие думают, что Lorem Ipsum</li>
       <li>взятый с потолка псевдо-латинский</li>
       <li>набор слов, но это не совсем так</li>
     </ul>
     <i class="material-icons">cloud</i>
     <i class="material-icons">favorite</i>
-<i class="material-icons">attachment</i>
-<i class="material-icons">computer</i>
-<i class="material-icons">traffic</i>
-<br><br>
-<i class="fas fa-clock"></i>
-<i class="fas fa-basketball-ball" style="font-size:120px;color:#2196F3" ></i>
-<i class="far fa-address-card" style="font-size:120px;color:#16fc0ebb"></i>
-<p><b><a href="https://htmlbase.ru/" target="_blank">Ссылка на шпаргалки</a></b></p>
-    
-    </div>
-    <div class="fixed">
-      Зафиксировано!
-      </div>
+    <i class="material-icons">attachment</i>
+    <i class="material-icons">computer</i>
+    <i class="material-icons">traffic</i>
+    <br /><br />
+    <i class="fas fa-clock"></i>
+    <i
+      class="fas fa-basketball-ball"
+      style="font-size: 120px; color: #2196f3"
+    ></i>
+    <i
+      class="far fa-address-card"
+      style="font-size: 120px; color: #16fc0ebb"
+    ></i>
+    <p>
+      <b
+        ><a href="https://htmlbase.ru/" target="_blank"
+          >Ссылка на шпаргалки</a
+        ></b
+      >
+    </p>
+
+    <img src="retro.jpg" width="300" height="200" />
+
+    <div class="fixed">Зафиксировано!</div>
   </body>
 </html>
