--- a/learn/index.html
+++ b/learn/index.html
@@ -35,14 +35,15 @@
     <h2 class="subtitle">Заголовок второго уровня</h2>
     <p>
       <b
-        >Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский
-        набор слов, но это не совсем так. Его корни уходят в один фрагмент
-        классической латыни 45 года н.э., то есть более двух тысячелетий назад.
-        Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат
-        Вирджиния, взял одно из самых странных слов в Lorem Ipsum,
-        "consectetur", и занялся его поисками в классической латинской
-        литературе.In this example, the sticky element sticks to the top of the
-        page (top: 0), when you reach its scroll position.</b
+        ><img src="retro.jpg" width="300" height="200" />Многие думают, что
+        Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не
+        совсем так. Его корни уходят в один фрагмент классической латыни 45 года
+        н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор
+        латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых
+        странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в
+        классической латинской литературе.In this example, the sticky element
+        sticks to the top of the page (top: 0), when you reach its scroll
+        position.</b
       >
 
       Scroll back up to remove the stickyness. Some text to enable scrolling..
@@ -56,17 +57,16 @@
       <li>взятый с потолка псевдо-латинский</li>
       <li>набор слов, но это не совсем так</li>
     </ul>
-    <i class="material-icons">cloud</i>
-    <i class="material-icons">favorite</i>
-    <i class="material-icons">attachment</i>
-    <i class="material-icons">computer</i>
-    <i class="material-icons">traffic</i>
-    <br /><br />
-    <i class="fas fa-clock"></i>
-    <i
-      class="fas fa-basketball-ball"
-      style="font-size: 120px; color: #2196f3"
-    ></i>
+    <div class="flex-container">
+      <div><i class="material-icons">cloud</i></div>
+      <div><i class="material-icons">favorite</i></div>
+      <div><i class="material-icons">attachment</i></div>
+      <div><i class="material-icons">computer</i></div>
+      <div><i class="material-icons">traffic</i></div>
+      <div><i class="fas fa-clock"></i></div>
+      <div><i class="fas fa-basketball-ball"></i></div>
+    </div>
+
     <i
       class="far fa-address-card"
       style="font-size: 120px; color: #16fc0ebb"
@@ -78,8 +78,6 @@
         ></b
       >
     </p>
-
-    <img src="retro.jpg" width="300" height="200" />
 
     <div class="fixed">Зафиксировано!</div>
   </body>
