Using inline-block to Create navigation links

--- a/learn/index.html
+++ b/learn/index.html
@@ -39,11 +39,11 @@
         Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не
         совсем так. Его корни уходят в один фрагмент классической латыни 45 года
         н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор
-        латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых
-        странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в
-        классической латинской литературе.In this example, the sticky element
-        sticks to the top of the page (top: 0), when you reach its scroll
-        position.</b
+        латыни из колледжа <span class="b">Hampden-Sydney</span>,
+        <span class="b">штат Вирджиния</span>, взял одно из самых странных слов
+        в Lorem Ipsum, "consectetur", и занялся его поисками в классической
+        латинской литературе.In this example, the sticky element sticks to the
+        top of the page (top: 0), when you reach its scroll position.</b
       >
 
       Scroll back up to remove the stickyness. Some text to enable scrolling..
