Style an element when a user mouses over it

--- a/learn/index.html
+++ b/learn/index.html
@@ -14,7 +14,7 @@
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
-    <h1>Это картинка</h1>
+    <h1>Это not картинка</h1>
     <h1 class="title">Оформление текста</h1>
     <div class="scroll">
       <p>
