Added different styles to hyperlinks

--- a/learn/index.html
+++ b/learn/index.html
@@ -14,7 +14,6 @@
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
-    <h1>Это not картинка</h1>
     <h1 class="title">Оформление текста</h1>
     <div class="scroll">
       <p>
@@ -71,15 +70,11 @@
       class="far fa-address-card"
       style="font-size: 120px; color: #16fc0ebb"
     ></i>
-    <p>
-      <b
-        ><a href="https://htmlbase.ru/" target="_blank"
-          >Ссылка на шпаргалки</a
-        ></b
-      >
-    </p>
 
     <div class="fixed">Зафиксировано!</div>
-    <p>Hello world!</p>
+    <div>
+      Hello world!
+      <p class="foo">Tada! Here I am!</p>
+    </div>
   </body>
 </html>
