--- a/learn/index.html
+++ b/learn/index.html
@@ -76,5 +76,13 @@
       Hello world!
       <p class="foo">Tada! Here I am!</p>
     </div>
+
+    <form action="/css_pseudo_classes.asp" method="get" target="_blank">
+      <label for="fname">First name:</label>
+      <input type="text" id="fname" name="fname" /><br /><br />
+      <label for="lname">Last name:</label>
+      <input type="text" id="lname" name="lname" /><br /><br />
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
