posted a link to an external script

--- a/learn/index.html
+++ b/learn/index.html
@@ -91,5 +91,7 @@
       <p id="demo">A Paragraph.</p>
       
       <button type="button" onclick="myTry()">Try it</button>
+      <script src="C:\projects\web3-semantics-guide\learn\alert.js"> 
+    </script>
   </body>
 </html>
