Added a semicolon at the end of each executable statement

--- a/learn/index.html
+++ b/learn/index.html
@@ -91,7 +91,9 @@
       <p id="demo">A Paragraph.</p>
       
       <button type="button" onclick="myTry()">Try it</button>
-      <script src="C:\projects\web3-semantics-guide\learn\alert.js"> 
-    </script>
+      
+      <script src="alert2.js"> 
+      </script>
   </body>
+
 </html>
