declaring a variable with let

--- a/learn/index.html
+++ b/learn/index.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/0248bf2fc3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="alert2.js"></script>
     <title>Изучаем HTML и CSS</title>
   </head>
   <body>
