--- a/learn/index.html
+++ b/learn/index.html
@@ -77,8 +77,11 @@
 
     <div class="fixed">Зафиксировано!</div>
     
-    <p id="demo">7</p>
-    <p id="demo2">7</p>
+    <p id="demo"></p>
+    <p id="demo2"></p>
+    <button onclick="document.getElementById('demo').innerHTML=Date()">
+      The time is?
+    </button>;
 
     
 
