replacing string content

--- a/learn/index.html
+++ b/learn/index.html
@@ -77,11 +77,9 @@
 
     <div class="fixed">Зафиксировано!</div>
     
-    <p id="demo"></p>
-    <p id="demo2"></p>
-    <button onclick="document.getElementById('demo').innerHTML=Date()">
-      The time is?
-    </button>;
+    <button onclick="myFunction()">Try it</button>
+
+<p id="demo">Please visit Microsoft!</p>
 
     
 
