--- a/learn/learn/index 2.html
+++ b/learn/learn/index 2.html
@@ -38,19 +38,9 @@
     </style>
   </head>
   <body>
-    <p>
-      <a href="index 2.html">Главная</a><br />
-      <a href="contacts.html">Контакты</a>
-    </p>
-
-    <div class="box">
-      <div class="green block">
-        <div class="close">x</div>
-      </div>
-      <div class="red block"></div>
-      <div class="blue block"></div>
-      <h1>Я здесь сверху</h1>
-      <h2>bottom</h2>
+    
+    
+      <script src="C:\projects\web3-semantics-guide\learn\alert2.js"></script>
     </div>
   </body>
 </html>
