change one image to another when you click on it

--- a/learn/jawa0/index 2.html
+++ b/learn/jawa0/index 2.html
@@ -40,7 +40,7 @@
   <body>
     
     
-      <script src="alert2.js"></script>
+      <script src="C:\projects\web3-semantics-guide\learn\jawa0\alert2.js"></script>
     </div>
   </body>
 </html>
