Finding HTML Elements by use the querySelectorAll() method

--- a/learn/rectangle/testrec.html
+++ b/learn/rectangle/testrec.html
@@ -16,6 +16,19 @@
   </head>
 
   <body>
+    <!-- <h2>JavaScript HTML DOM</h2>
+
+    <p id="intro">Finding my brain</p>
+    <p>This example demonstrates the <b>getElementsById</b> method.</p>
+
+    <p id="demo"></p>
+
+    <script>
+      const foo = document.getElementById("intro");
+
+      document.getElementById("demo").innerHTML =
+        "The text from the intro paragraph is: " + foo.innerHTML;
+    </script> -->
     <div class="rectangle"></div>
     <script src="do.js"></script>
   </body>
