Returns the absolute base URI of the document

--- a/learn/DOM/index.html
+++ b/learn/DOM/index.html
@@ -12,6 +12,11 @@
       Браузерное окружение. Работа с <span class="yellow">DOM.</span>
     </h1>
     <h3>Урок №13</h3>
+    <div data-say-hi="yes">Привет!</div>
+    <ul>
+      <li>Корчи</li>
+      <li>Йончи</li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
